:lipstick: Fix : 이메일 중복 체크 버튼 margin 값 수정 - UI 개선을 위해 이메일 중복 체크 버튼 margin 값 수정
Related to: #123

--- a/AOS/app/src/main/res/layout/fragment_register_email_password.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_email_password.xml
@@ -65,6 +65,7 @@
             android:id="@+id/btn_confirm_duplicate_email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
             android:background="@drawable/background_normal_radius_btn"
             android:paddingVertical="15dp"
             android:text="@string/email_duplicate_confirm"
