:sparkles: Feat : fragment_register_email_password.xml 데이터 바인딩 적용 - fragment_register_email_password.xml 데이터 바인딩 적용
Related to: #123

--- a/AOS/app/src/main/res/layout/fragment_register_email_password.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_email_password.xml
@@ -5,12 +5,15 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.softeer.team6four.ui.user.signup.SignUpViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.signup.RegisterEmailPasswordFragment">
+        tools:context=".ui.user.signup.RegisterEmailPasswordFragment">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/start_guide_line"
@@ -47,17 +50,24 @@
             app:errorEnabled="true"
             app:errorIconDrawable="@drawable/icon_wrong_input"
             app:errorTextColor="@color/error"
+            app:helperText="@string/success_check_email_description"
+            app:helperTextEnabled="true"
+            app:helperTextTextColor="@color/main_400"
             app:layout_constraintEnd_toEndOf="@id/end_guide_line"
             app:layout_constraintStart_toStartOf="@id/start_guide_line"
-            app:layout_constraintTop_toBottomOf="@id/tv_email">
+            app:layout_constraintTop_toBottomOf="@id/tv_email"
+            app:setEmailError="@{viewModel.emailErrorState}"
+            app:setEmailHelper="@{viewModel.emailCheckState}">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:afterTextChanged="@{s -> viewModel.updateEmail(s)}"
                 android:inputType="textEmailAddress"
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="15dp"
+                android:text="@{viewModel.email}"
                 android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -67,6 +77,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="17dp"
             android:background="@drawable/background_normal_radius_btn"
+            android:enabled="@{viewModel.email}"
+            android:onClick="@{() -> viewModel.checkDuplicateEmail()}"
             android:paddingVertical="15dp"
             android:text="@string/email_duplicate_confirm"
             android:textStyle="bold"
@@ -103,6 +115,7 @@
                 android:inputType="textPassword"
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="15dp"
+                android:afterTextChanged="@{s -> viewModel.updatePassword(s)}"
                 android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -129,12 +142,14 @@
             app:errorTextColor="@color/error"
             app:layout_constraintEnd_toEndOf="@id/end_guide_line"
             app:layout_constraintStart_toStartOf="@id/start_guide_line"
-            app:layout_constraintTop_toBottomOf="@id/tv_confirm_password">
+            app:layout_constraintTop_toBottomOf="@id/tv_confirm_password"
+            app:setPasswordError="@{viewModel.passwordSameCheckState}">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:afterTextChanged="@{s -> viewModel.updateConfirmPassword(s)}"
                 android:inputType="textPassword"
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="15dp"
@@ -148,6 +163,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
+            android:enabled="@{viewModel.nextBtnState}"
             android:paddingVertical="20dp"
             android:text="@string/next"
             android:textSize="16sp"
