--- a/AOS/app/src/main/res/layout/fragment_register_nickname.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_nickname.xml
@@ -5,12 +5,15 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.softeer.team6four.ui.user.signup.SignUpViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.signup.RegisterNicknameFragment">
+        tools:context=".ui.user.signup.RegisterNicknameFragment">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/start_guide_line"
@@ -45,6 +48,10 @@
             app:boxCornerRadiusTopStart="@dimen/radius_normal"
             app:boxStrokeColor="@color/searchbar_stroke_color"
             app:errorEnabled="true"
+            app:helperTextEnabled="true"
+            app:helperTextTextColor="@color/main_400"
+            app:setNicknameHelper="@{viewModel.nicknameCheckState}"
+            app:setNicknameError="@{viewModel.nicknameErrorState}"
             app:errorIconDrawable="@drawable/icon_wrong_input"
             app:errorTextColor="@color/error"
             app:layout_constraintEnd_toEndOf="@id/end_guide_line"
@@ -55,6 +62,7 @@
                 android:id="@+id/et_nickname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:afterTextChanged="@{s -> viewModel.updateNickname(s)}"
                 android:inputType="text"
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="15dp"
@@ -67,6 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="17dp"
             android:background="@drawable/background_normal_radius_btn"
+            android:onClick="@{() -> viewModel.checkDuplicateNickname()}"
             android:paddingVertical="15dp"
             android:text="@string/nickname_duplicate_confirm"
             android:textStyle="bold"
@@ -79,6 +88,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
+            android:enabled="@{viewModel.nicknameCheckState}"
+            android:onClick="@{() -> viewModel.requestSignUp()}"
             android:paddingVertical="20dp"
             android:text="@string/complete_signup"
             android:textSize="16sp"
