--- a/AOS/app/src/main/res/layout/fragment_home.xml
+++ b/AOS/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.softeer.team6four.ui.home.HomeViewModel" />
+    </data>
+
     <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -55,6 +62,7 @@
                     android:id="@+id/et_search_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:afterTextChanged="@{s -> viewModel.updateAddressText(s)}"
                     android:imeOptions="actionSearch"
                     android:maxLines="1"
                     android:textColor="@color/gray_500" />
