:sparkles: feat : 포인트 내역 xml에 viewModel 정의
Related to: #138

--- a/AOS/app/src/main/res/layout/fragment_my_point.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_point.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.softeer.team6four.ui.mypage.point.MyPointViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -86,7 +89,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
-            android:text="10,000"
             android:textSize="20sp"
             android:textColor="@android:color/black"
             android:textStyle="bold"
