:lipstick: feat : 무한스크롤 용 프로그래스바 추가 및 포인트 내역 화면 스크롤 에러 수정
Related to: #138

--- a/AOS/app/src/main/res/layout/fragment_my_point.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_point.xml
@@ -124,12 +124,13 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_point_history"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="20dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_total_points"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/point_history_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
